--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,38 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    background-color: #0d2235;
+}
+img {
+    max-width: 100%;
+}
+
+h1 {
+    color: white;
+    text-align: left;
+    font-weight: 700;
+    font-size: 50px;
+    margin-bottom: 50px;
+    margin-top: 80px;
+}
+h1::after {
+    content: '';
+    width: 100px;
+    height:6px;
+    background-color: #66a2fe;
+    display: block;
+}
+
+label {
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 20px;
+    margin-top: 2rem;
+}
+input[type="submit"]{
+    margin-top: 20px;
+    font-weight: bold;
+    font-size: 20px;
+    padding: 10px;
+    height: auto;
+}
+
