Agregado componente de selección de moneda

--- a/src/components/criptomonedas/criptomonedas.component.html
+++ b/src/components/criptomonedas/criptomonedas.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="one-half column">
-    <img src="assets/img/cryptomonedas.png" alt="Imagen Criptomonedas" />
+      <img src="../../assets/img/cryptomonedas.png" alt="Imagen Criptoikkmonedas" />
     </div>
     <div class="one-half column">
       <form id="formulario" (submit)="submitFormulario($event)">
