Actualizacion de CSS

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-criptomonedas></app-criptomonedas>
+<!-- Este es el contenedor donde se mostrará LoginComponent o HomeComponent -->
+<router-outlet></router-outlet>
