--- a/src/components/criptomonedas/criptomonedas.component.html
+++ b/src/components/criptomonedas/criptomonedas.component.html
@@ -1,3 +1,8 @@
+<div class="barra">
+  <div class="botones">
+    <button>Cerrar sesión</button>
+  </div>
+</div>
 <div class="container">
   <div class="row">
     <div class="one-half column">
